completions: 更新 git

--- a/completions/git/language/zh-CN.json
+++ b/completions/git/language/zh-CN.json
@@ -42,21 +42,21 @@
         {
           "name": "--ref-format=",
           "tip": [
-            "Specify the given ref storage <format> for the repository."
+            "为存储库指定给定的 ref 存储 <format> 格式。"
           ],
           "next": [
             {
               "name": "files",
               "tip": [
-                "files for loose files with packed-refs.\n",
-                "This is the default."
+                "files 用于带有 packed-refs 的松散文件。\n",
+                "这是默认值。"
               ]
             },
             {
               "name": "reftable",
               "tip": [
-                "reftable for the reftable format.\n",
-                "This format is experimental and its internals are subject to change."
+                "reftable 格式。\n",
+                "这种格式是试验性的，其内部结构可能会发生变化。"
               ]
             }
           ]
@@ -1153,8 +1153,8 @@
           "name": "-n",
           "tip": [
             "U: -n[num]\n",
-            "[num] specifies how many lines from the annotation, if any, are printed when using -l. Implies --list.\n",
-            "The default is not to print any annotation lines. If no number is given to -n, only the first line is printed. If the tag is not annotated, the commit message is displayed instead."
+            "[num] 用于指定在使用 -l 时打印注释的行数(如果存在)，这暗含了 --list。\n",
+            "默认情况下不打印任何注释行。如果没有给 -n 赋值，则只打印第一行。如果标签没有注释，则会显示提交信息。"
           ]
         },
         {
@@ -3186,8 +3186,8 @@
     {
       "name": "--no-replace-objects",
       "tip": [
-        "Do not use replacement refs to replace Git objects.\n",
-        "This is equivalent to exporting the GIT_NO_REPLACE_OBJECTS environment variable with any value."
+        "不要使用替换引用来替换 Git 对象。\n",
+        "这相当于导出任意值的 GIT_NO_REPLACE_OBJECTS 环境变量。"
       ]
     },
     {
