completions: 更新 winget

--- a/completions/winget/language/en-US.json
+++ b/completions/winget/language/en-US.json
@@ -1074,6 +1074,15 @@
           ]
         },
         {
+          "name": "--all",
+          "alias": [
+            "--all-versions"
+          ],
+          "tip": [
+            "Uninstall all versions."
+          ]
+        },
+        {
           "name": "-s",
           "alias": [
             "--source"
