--- a/completions/winget/language/zh-CN.json
+++ b/completions/winget/language/zh-CN.json
@@ -1074,6 +1074,15 @@
           ]
         },
         {
+          "name": "--all",
+          "alias": [
+            "--all-versions"
+          ],
+          "tip": [
+            "卸载所有版本。"
+          ]
+        },
+        {
           "name": "-s",
           "alias": [
             "--source"
