completions: 更新 oh-my-posh

--- a/completions/oh-my-posh/language/en-US.json
+++ b/completions/oh-my-posh/language/en-US.json
@@ -4,12 +4,43 @@
       "name": "cache",
       "tip": [
         "Interact with the oh-my-posh cache."
+      ],
+      "next": [
+        {
+          "name": "path",
+          "tip": [
+            "list cache path"
+          ]
+        },
+        {
+          "name": "clear",
+          "tip": [
+            "remove all cache values"
+          ]
+        },
+        {
+          "name": "edit",
+          "tip": [
+            "edit cache values"
+          ]
+        }
       ]
     },
     {
       "name": "config",
       "tip": [
         "Interact with the config."
+      ],
+      "next": [
+        {
+          "name": "export"
+        },
+        {
+          "name": "migrate"
+        },
+        {
+          "name": "edit"
+        }
       ]
     },
     {
@@ -22,24 +53,85 @@
       "name": "disable",
       "tip": [
         "Disable a feature."
+      ],
+      "next": [
+        {
+          "name": "notice"
+        },
+        {
+          "name": "upgrade"
+        }
       ]
     },
     {
       "name": "enable",
       "tip": [
         "Enable a feature."
+      ],
+      "next": [
+        {
+          "name": "notice"
+        },
+        {
+          "name": "upgrade"
+        }
       ]
     },
     {
       "name": "font",
       "tip": [
         "Manage fonts."
+      ],
+      "next": [
+        {
+          "name": "install"
+        },
+        {
+          "name": "configure"
+        }
+      ],
+      "options": [
+        {
+          "name": "--zip-folder",
+          "tip": [
+            "U: --zip-folder <string>\n",
+            "the folder inside the zip file to install fonts from"
+          ],
+          "next": 0
+        }
       ]
     },
     {
       "name": "get",
       "tip": [
         "Get a value from oh-my-posh."
+      ],
+      "next": [
+        {
+          "name": "shell"
+        },
+        {
+          "name": "millis"
+        },
+        {
+          "name": "accent"
+        },
+        {
+          "name": "toggles"
+        },
+        {
+          "name": "width"
+        }
+      ],
+      "options": [
+        {
+          "name": "--shell",
+          "tip": [
+            "U: --shell <string>\n",
+            "the shell to print for"
+          ],
+          "next": 0
+        }
       ]
     },
     {
@@ -52,6 +144,64 @@
       "name": "init",
       "tip": [
         "Initialize your shell and config."
+      ],
+      "next": [
+        {
+          "name": "bash"
+        },
+        {
+          "name": "zsh"
+        },
+        {
+          "name": "fish"
+        },
+        {
+          "name": "powershell"
+        },
+        {
+          "name": "pwsh"
+        },
+        {
+          "name": "cmd"
+        },
+        {
+          "name": "nu"
+        },
+        {
+          "name": "tcsh"
+        },
+        {
+          "name": "elvish"
+        },
+        {
+          "name": "xonsh"
+        }
+      ],
+      "options": [
+        {
+          "name": "--debug",
+          "tip": [
+            "enable/disable debug mode"
+          ]
+        },
+        {
+          "name": "-p",
+          "alias": [
+            "--print"
+          ],
+          "tip": [
+            "print the init script"
+          ]
+        },
+        {
+          "name": "-s",
+          "alias": [
+            "--strict"
+          ],
+          "tip": [
+            "run in strict mode"
+          ]
+        }
       ]
     },
     {
@@ -64,6 +214,32 @@
       "name": "print",
       "tip": [
         "Print the prompt/context."
+      ],
+      "next": [
+        {
+          "name": "debug"
+        },
+        {
+          "name": "primary"
+        },
+        {
+          "name": "secondary"
+        },
+        {
+          "name": "transient"
+        },
+        {
+          "name": "right"
+        },
+        {
+          "name": "tooltip"
+        },
+        {
+          "name": "valid"
+        },
+        {
+          "name": "error"
+        }
       ]
     },
     {
@@ -91,17 +267,6 @@
       "tip": [
         "Show the version."
       ]
-    },
-    {
-      "name": "-c",
-      "alias": [
-        "--config"
-      ],
-      "tip": [
-        "U: -c | --config <string>\n",
-        "config file path"
-      ],
-      "next": 0
     },
     {
       "name": "-i",
@@ -133,6 +298,17 @@
       "tip": [
         "Show help."
       ]
+    },
+    {
+      "name": "-c",
+      "alias": [
+        "--config"
+      ],
+      "tip": [
+        "U: -c | --config <string>\n",
+        "config file path"
+      ],
+      "next": 0
     }
   ],
   "info": {
