completions: 更新 psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1088,6 +1088,33 @@
               ]
             },
             {
+              "name": "enable_path_with_trailing_separator",
+              "tip": [
+                "Current Value: {{ $PSCompletions.config.enable_path_with_trailing_separator }} (Default: 1)\n",
+                "Set whether path completion has a trailing separator.\n",
+                "With: C:\\Users\\abgox\\\n",
+                "Without: C:\\Users\\abgox"
+              ],
+              "next": [
+                {
+                  "name": "0",
+                  "tip": [
+                    "Set to 0\n",
+                    "Without a trailing separator.\n",
+                    "e.g. C:\\Users\\abgox"
+                  ]
+                },
+                {
+                  "name": "1",
+                  "tip": [
+                    "Set to 1 (Default)\n",
+                    "With a trailing separator.\n",
+                    "e.g. C:\\Users\\abgox\\"
+                  ]
+                }
+              ]
+            },
+            {
               "name": "enable_list_loop",
               "tip": [
                 "Current Value: {{ $PSCompletions.config.enable_list_loop }} (Default: 1)\n",
