--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1079,6 +1079,33 @@
               ]
             },
             {
+              "name": "enable_path_with_trailing_separator",
+              "tip": [
+                "当前值: {{ $PSCompletions.config.enable_path_with_trailing_separator }} (默认值为 1)\n",
+                "设置路径完成是否带有末尾的分隔符。\n",
+                "有: C:\\Users\\abgox\\\n",
+                "无: C:\\Users\\abgox"
+              ],
+              "next": [
+                {
+                  "name": "0",
+                  "tip": [
+                    "设置为 0\n",
+                    "不带有末尾的分隔符。\n",
+                    "如: C:\\Users\\abgox"
+                  ]
+                },
+                {
+                  "name": "1",
+                  "tip": [
+                    "设置为 1 (默认值)\n",
+                    "带有末尾的分隔符。\n",
+                    "如: C:\\Users\\abgox\\"
+                  ]
+                }
+              ]
+            },
+            {
               "name": "enable_list_loop",
               "tip": [
                 "当前值: {{ $PSCompletions.config.enable_list_loop }} (默认值为 1)\n",
