completions: 更新 git

--- a/completions/git/language/en-US.json
+++ b/completions/git/language/en-US.json
@@ -1257,6 +1257,21 @@
           ]
         },
         {
+          "name": "core.ignorecase",
+          "tip": [
+            "Configure the case-sensitivity of file names.\n",
+            "The default is false, except git-clone or git-init will probe and set core.ignoreCase true if appropriate when the repository is created."
+          ],
+          "next": [
+            {
+              "name": "false"
+            },
+            {
+              "name": "true"
+            }
+          ]
+        },
+        {
           "name": "https.proxy",
           "tip": [
             "Configure the Git https proxy.\n",
