--- a/completions/git/language/zh-CN.json
+++ b/completions/git/language/zh-CN.json
@@ -1256,6 +1256,21 @@
           ]
         },
         {
+          "name": "core.ignorecase",
+          "tip": [
+            "配置是否忽略大小写。\n",
+            "默认值为 false，但 git clone 或 git init 会在创建存储库时探测并将 core.ignoreCase 设置为 true(如果合适)。"
+          ],
+          "next": [
+            {
+              "name": "false"
+            },
+            {
+              "name": "true"
+            }
+          ]
+        },
+        {
           "name": "https.proxy",
           "tip": [
             "配置 Git https 代理。\n",
