--- a/completions/git/language/en-US.json
+++ b/completions/git/language/en-US.json
@@ -1957,6 +1957,163 @@
       ]
     },
     {
+      "name": "lfs",
+      "tip": [
+        "Work with large files in Git repositories."
+      ],
+      "next": [
+        {
+          "name": "checkout",
+          "tip": [
+            "Populate working copy with real content from Git LFS files."
+          ]
+        },
+        {
+          "name": "completion",
+          "tip": [
+            "Generate shell scripts for command-line tab-completion of Git LFS commands."
+          ],
+          "next": [
+            {
+              "name": "bash"
+            },
+            {
+              "name": "fish"
+            },
+            {
+              "name": "zsh"
+            }
+          ]
+        },
+        {
+          "name": "dedup",
+          "tip": [
+            "De-duplicate Git LFS files."
+          ]
+        },
+        {
+          "name": "env",
+          "tip": [
+            "Display the Git LFS environment."
+          ]
+        },
+        {
+          "name": "ext",
+          "tip": [
+            "Display Git LFS extension details."
+          ]
+        },
+        {
+          "name": "fetch",
+          "tip": [
+            "Download Git LFS files from a remote."
+          ]
+        },
+        {
+          "name": "fsck",
+          "tip": [
+            "Check Git LFS files for consistency."
+          ]
+        },
+        {
+          "name": "install",
+          "tip": [
+            "Install Git LFS configuration."
+          ]
+        },
+        {
+          "name": "lock",
+          "tip": [
+            "Set a file as \"locked\" on the Git LFS server."
+          ]
+        },
+        {
+          "name": "locks",
+          "tip": [
+            "List currently \"locked\" files from the Git LFS server."
+          ]
+        },
+        {
+          "name": "logs",
+          "tip": [
+            "Show errors from the Git LFS command."
+          ]
+        },
+        {
+          "name": "ls-files",
+          "tip": [
+            "Show information about Git LFS files in the index and working tree."
+          ]
+        },
+        {
+          "name": "migrate",
+          "tip": [
+            "Migrate history to or from Git LFS."
+          ]
+        },
+        {
+          "name": "prune",
+          "tip": [
+            "Delete old Git LFS files from local storage."
+          ]
+        },
+        {
+          "name": "pull",
+          "tip": [
+            "Fetch Git LFS changes from the remote & checkout any required working tree files."
+          ]
+        },
+        {
+          "name": "push",
+          "tip": [
+            "Push queued large files to the Git LFS endpoint."
+          ]
+        },
+        {
+          "name": "status",
+          "tip": [
+            "Show the status of Git LFS files in the working tree."
+          ]
+        },
+        {
+          "name": "track",
+          "tip": [
+            "View or add Git LFS paths to Git attributes."
+          ]
+        },
+        {
+          "name": "uninstall",
+          "tip": [
+            "Uninstall Git LFS by removing hooks and smudge/clean filter configuration."
+          ]
+        },
+        {
+          "name": "unlock",
+          "tip": [
+            "Remove \"locked\" setting for a file on the Git LFS server."
+          ]
+        },
+        {
+          "name": "untrack",
+          "tip": [
+            "Remove Git LFS paths from Git Attributes."
+          ]
+        },
+        {
+          "name": "update",
+          "tip": [
+            "Update Git hooks for the current Git repository."
+          ]
+        },
+        {
+          "name": "version",
+          "tip": [
+            "Report the version number."
+          ]
+        }
+      ]
+    },
+    {
       "name": "prune",
       "tip": [
         "Remove all unreachable objects from the object database."
