completions: 更新 psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1632,6 +1632,7 @@
         "   psc add git docker     --- Add git,docker"
       ],
       "doing": "<@Cyan>Adding completion --- <@Magenta>{{ $completion }}",
+      "show_alias": "<@Yellow>The default trigger alias for this completion are: <@Magenta>{{ $config.alias -join ' ' }}",
       "done": [
         "<@Green>Completion <@Magenta>{{ $completion }}<@Green> add completed.\n",
         "Completion file directory: <@Blue>{{ $completion_dir }}\n",
