--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1641,6 +1641,7 @@
         "   psc add git docker     --- 添加 git 和 docker 补全"
       ],
       "doing": "<@Cyan>正在添加补全 --- <@Magenta>{{ $completion }}",
+      "show_alias": "<@Yellow>这个补全默认的触发别名有: <@Magenta>{{ $config.alias -join ' ' }}",
       "done": [
         "<@Green>补全 <@Magenta>{{ $completion }}<@Green> 添加成功\n",
         "补全文件所在目录: <@Blue>{{ $completion_dir }}\n",
