completions: 更新 scoop

--- a/completions/scoop/language/en-US.json
+++ b/completions/scoop/language/en-US.json
@@ -94,10 +94,10 @@
         {
           "name": "-s",
           "alias": [
-            "--skip"
+            "--skip-hash-check"
           ],
           "tip": [
-            "U: -s|--skip\n",
+            "U: -s|--skip-hash-check\n",
             "Skip hash verification"
           ]
         },
@@ -233,10 +233,10 @@
         {
           "name": "-s",
           "alias": [
-            "--skip"
+            "--skip-hash-check"
           ],
           "tip": [
-            "U: -s|--skip\n",
+            "U: -s|--skip-hash-check\n",
             "Skip hash verification"
           ]
         },
