--- a/completions/scoop/language/zh-CN.json
+++ b/completions/scoop/language/zh-CN.json
@@ -93,10 +93,10 @@
         {
           "name": "-s",
           "alias": [
-            "--skip"
+            "--skip-hash-check"
           ],
           "tip": [
-            "U: -s|--skip\n",
+            "U: -s|--skip-hash-check\n",
             "跳过哈希验证"
           ]
         },
@@ -232,10 +232,10 @@
         {
           "name": "-s",
           "alias": [
-            "--skip"
+            "--skip-hash-check"
           ],
           "tip": [
-            "U: -s|--skip\n",
+            "U: -s|--skip-hash-check\n",
             "跳过哈希验证"
           ]
         },
