completions: 更新 scoop-install

--- a/completions/scoop-install/language/en-US.json
+++ b/completions/scoop-install/language/en-US.json
@@ -1,7 +1,7 @@
 {
   "info": {
     "completion_info": {
-      "url": "https://github.com/abgox/scoop-install",
+      "url": "https://github.com/abgox/scoop-tools",
       "description": [
         "A PowerShell script that allows you to add Scoop configurations to use a replaced url instead of the original url when installing the app in Scoop."
       ]
