--- a/completions/scoop-install/language/zh-CN.json
+++ b/completions/scoop-install/language/zh-CN.json
@@ -1,7 +1,7 @@
 {
   "info": {
     "completion_info": {
-      "url": "https://gitee.com/abgox/scoop-install",
+      "url": "https://gitee.com/abgox/scoop-tools",
       "description": [
         "一个 PowerShell 脚本，它允许你添加 Scoop 配置，在 Scoop 安装应用时使用替换后的 url 而不是原始的 url。"
       ]
