feat: update psc completions

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -190,6 +190,28 @@
           ]
         },
         {
+          "name": "enable_auto_alias_setup",
+          "tip": [
+            "Current Value: {{ $PSCompletions.config.enable_auto_alias_setup }}\n",
+            "Set whether to automatically use 'Set-Alias' to add aliases defined by 'psc alias'. Default to 1.\n",
+            "If set to 0, you need to use 'Set-Alias' to set it manually."
+          ],
+          "next": [
+            {
+              "name": "1",
+              "tip": [
+                "Set to 1 (Default)"
+              ]
+            },
+            {
+              "name": "0",
+              "tip": [
+                "Set to 0"
+              ]
+            }
+          ]
+        },
+        {
           "name": "enable_completions_update",
           "tip": [
             "Current Value: {{ $PSCompletions.config.enable_completions_update }}\n",
