--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -191,6 +191,28 @@
           ]
         },
         {
+          "name": "enable_auto_alias_setup",
+          "tip": [
+            "当前值: {{ $PSCompletions.config.enable_auto_alias_setup }}\n",
+            "设置是否自动使用 Set-Alias 添加 psc alias 定义的别名，默认为 1\n",
+            "如果设置为 0，则需要手动使用 Set-Alias 设置"
+          ],
+          "next": [
+            {
+              "name": "1",
+              "tip": [
+                "设置为 1 (默认值)"
+              ]
+            },
+            {
+              "name": "0",
+              "tip": [
+                "设置为 0"
+              ]
+            }
+          ]
+        },
+        {
           "name": "enable_completions_update",
           "tip": [
             "当前值: {{ $PSCompletions.config.enable_completions_update }}\n",
