feat: update scoop completions

--- a/completions/scoop/language/zh-CN.json
+++ b/completions/scoop/language/zh-CN.json
@@ -505,6 +505,418 @@
             "移除配置。"
           ],
           "next": []
+        },
+        {
+          "name": "use_external_7zip",
+          "hide": true,
+          "next": [
+            {
+              "name": "true"
+            },
+            {
+              "name": "false",
+              "tip": [
+                "默认值"
+              ]
+            }
+          ]
+        },
+        {
+          "name": "use_lessmsi",
+          "hide": true,
+          "next": [
+            {
+              "name": "true"
+            },
+            {
+              "name": "false",
+              "tip": [
+                "默认值"
+              ]
+            }
+          ]
+        },
+        {
+          "name": "use_sqlite_cache",
+          "hide": true,
+          "next": [
+            {
+              "name": "true"
+            },
+            {
+              "name": "false",
+              "tip": [
+                "默认值"
+              ]
+            }
+          ]
+        },
+        {
+          "name": "no_junction",
+          "hide": true,
+          "next": [
+            {
+              "name": "true"
+            },
+            {
+              "name": "false",
+              "tip": [
+                "默认值"
+              ]
+            }
+          ]
+        },
+        {
+          "name": "scoop_repo",
+          "hide": true,
+          "next": [
+            {
+              "name": "https://github.com/ScoopInstaller/Scoop"
+            }
+          ]
+        },
+        {
+          "name": "scoop_branch",
+          "hide": true,
+          "next": [
+            {
+              "name": "master"
+            },
+            {
+              "name": "develop"
+            }
+          ]
+        },
+        {
+          "name": "proxy",
+          "hide": true
+        },
+        {
+          "name": "autostash_on_conflict",
+          "hide": true,
+          "next": [
+            {
+              "name": "true"
+            },
+            {
+              "name": "false",
+              "tip": [
+                "默认值"
+              ]
+            }
+          ]
+        },
+        {
+          "name": "default_architecture",
+          "hide": true,
+          "next": [
+            {
+              "name": "64bit"
+            },
+            {
+              "name": "32bit"
+            },
+            {
+              "name": "arm64"
+            }
+          ]
+        },
+        {
+          "name": "debug",
+          "hide": true,
+          "next": [
+            {
+              "name": "true"
+            },
+            {
+              "name": "false",
+              "tip": [
+                "默认值"
+              ]
+            }
+          ]
+        },
+        {
+          "name": "force_update",
+          "hide": true,
+          "next": [
+            {
+              "name": "true"
+            },
+            {
+              "name": "false",
+              "tip": [
+                "默认值"
+              ]
+            }
+          ]
+        },
+        {
+          "name": "show_update_log",
+          "hide": true,
+          "next": [
+            {
+              "name": "true",
+              "tip": [
+                "默认值"
+              ]
+            },
+            {
+              "name": "false"
+            }
+          ]
+        },
+        {
+          "name": "show_manifest",
+          "hide": true,
+          "next": [
+            {
+              "name": "true"
+            },
+            {
+              "name": "false",
+              "tip": [
+                "默认值"
+              ]
+            }
+          ]
+        },
+        {
+          "name": "shim",
+          "hide": true
+        },
+        {
+          "name": "root_path",
+          "hide": true
+        },
+        {
+          "name": "global_path",
+          "hide": true
+        },
+        {
+          "name": "cache_path",
+          "hide": true
+        },
+        {
+          "name": "gh_token",
+          "hide": true
+        },
+        {
+          "name": "virustotal_api_key",
+          "hide": true
+        },
+        {
+          "name": "cat_style",
+          "hide": true
+        },
+        {
+          "name": "ignore_running_processes",
+          "hide": true,
+          "next": [
+            {
+              "name": "true"
+            },
+            {
+              "name": "false",
+              "tip": [
+                "默认值"
+              ]
+            }
+          ]
+        },
+        {
+          "name": "private_hosts",
+          "hide": true
+        },
+        {
+          "name": "hold_update_until",
+          "hide": true
+        },
+        {
+          "name": "update_nightly",
+          "hide": true,
+          "next": [
+            {
+              "name": "true"
+            },
+            {
+              "name": "false",
+              "tip": [
+                "默认值"
+              ]
+            }
+          ]
+        },
+        {
+          "name": "use_isolated_path",
+          "hide": true,
+          "next": [
+            {
+              "name": "true"
+            },
+            {
+              "name": "false",
+              "tip": [
+                "默认值"
+              ]
+            }
+          ]
+        },
+        {
+          "name": "aria2-enabled",
+          "hide": true,
+          "next": [
+            {
+              "name": "true"
+            },
+            {
+              "name": "false",
+              "tip": [
+                "默认值"
+              ]
+            }
+          ]
+        },
+        {
+          "name": "aria2-warning-enabled",
+          "hide": true,
+          "next": [
+            {
+              "name": "true",
+              "tip": [
+                "默认值"
+              ]
+            },
+            {
+              "name": "false"
+            }
+          ]
+        },
+        {
+          "name": "aria2-retry-wait",
+          "hide": true,
+          "next": [
+            {
+              "name": "2",
+              "tip": [
+                "默认值"
+              ]
+            }
+          ]
+        },
+        {
+          "name": "aria2-split",
+          "hide": true,
+          "next": [
+            {
+              "name": "5",
+              "tip": [
+                "默认值"
+              ]
+            }
+          ]
+        },
+        {
+          "name": "aria2-max-connection-per-server",
+          "hide": true,
+          "next": [
+            {
+              "name": "5",
+              "tip": [
+                "默认值"
+              ]
+            }
+          ]
+        },
+        {
+          "name": "aria2-min-split-size",
+          "hide": true,
+          "next": [
+            {
+              "name": "5M",
+              "tip": [
+                "默认值"
+              ]
+            }
+          ]
+        },
+        {
+          "name": "aria2-options",
+          "hide": true
+        },
+        {
+          "name": "abgox-abyss-app-uninstall-action",
+          "hide": true,
+          "next": [
+            {
+              "name": "1",
+              "tip": [
+                "默认值\n",
+                "详情参考: https://gitee.com/abgox/abyss#config"
+              ]
+            },
+            {
+              "name": "12",
+              "tip": [
+                "详情参考: https://gitee.com/abgox/abyss#config"
+              ]
+            },
+            {
+              "name": "13",
+              "tip": [
+                "详情参考: https://gitee.com/abgox/abyss#config"
+              ]
+            },
+            {
+              "name": "123",
+              "tip": [
+                "详情参考: https://gitee.com/abgox/abyss#config"
+              ]
+            }
+          ]
+        },
+        {
+          "name": "abgox-abyss-app-shortcuts-action",
+          "hide": true,
+          "next": [
+            {
+              "name": "1",
+              "tip": [
+                "默认值\n",
+                "详情参考: https://gitee.com/abgox/abyss#config"
+              ]
+            },
+            {
+              "name": "0",
+              "tip": [
+                "详情参考: https://gitee.com/abgox/abyss#config"
+              ]
+            },
+            {
+              "name": "2",
+              "tip": [
+                "详情参考: https://gitee.com/abgox/abyss#config"
+              ]
+            }
+          ]
+        },
+        {
+          "name": "scoop-install-url-replace-from",
+          "hide": true,
+          "next": [
+            {
+              "name": "https://github.com"
+            }
+          ]
+        },
+        {
+          "name": "scoop-install-url-replace-to",
+          "hide": true,
+          "next": [
+            {
+              "name": "https://gh-proxy.com/github.com"
+            }
+          ]
         }
       ]
     },
