feat: update pnpm completions

--- a/completions/pnpm/language/en-US.json
+++ b/completions/pnpm/language/en-US.json
@@ -1,6 +1,27 @@
 {
   "root": [
     {
+      "name": "create",
+      "tip": [
+        "Create a project from a create-* or @foo/create-* starter kit.\n",
+        "E: create vite@latest   --- create a vite project"
+      ],
+      "next": [
+        {
+          "name": "vite@latest",
+          "tip": [
+            "Create a vite project"
+          ]
+        },
+        {
+          "name": "vue@latest",
+          "tip": [
+            "Create a vue project"
+          ]
+        }
+      ]
+    },
+    {
       "name": "install",
       "alias": [
         "i"
