--- a/completions/pnpm/language/zh-CN.json
+++ b/completions/pnpm/language/zh-CN.json
@@ -1,6 +1,27 @@
 {
   "root": [
     {
+      "name": "create",
+      "tip": [
+        "从 create-* 或 @foo/create-* 启动套件创建一个项目。\n",
+        "E: create vite@latest   --- 创建一个 vite 项目"
+      ],
+      "next": [
+        {
+          "name": "vite@latest",
+          "tip": [
+            "创建一个 vite 项目"
+          ]
+        },
+        {
+          "name": "vue@latest",
+          "tip": [
+            "创建一个 vue 项目"
+          ]
+        }
+      ]
+    },
+    {
       "name": "install",
       "alias": [
         "i"
