feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -215,7 +215,8 @@
           "name": "enable_completions_update",
           "tip": [
             "Current Value: {{ $PSCompletions.config.enable_completions_update }}\n",
-            "Set whether to show update message when loading PSCompletions module at first.(e.g. Updatable completions, New completions)"
+            "Set whether to show update message when loading PSCompletions module at first. (e.g. Updatable completions, New completions)\n",
+            "Note: It's not recommended to disable it, because it will help you get the latest update information in time."
           ],
           "next": [
             {
@@ -230,7 +231,7 @@
               "tip": [
                 "Set to 0\n",
                 "Don't show update message when loading PSCompletions module at first.\n",
-                "Note: It's not recommended to close it, because it will help you get the latest update information in time."
+                "Note: It's not recommended to disable it, because it will help you get the latest update information in time."
               ]
             }
           ]
